jQuery event handler

--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,15 @@
 <html>
 
 <head>
+    <link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.css">
     <title> TypeScript Sample App</title>
 </head>
 
 <body>
-
+    <button id="clickMe" class="btn btn-success btn-block btn-lg">Click Me</button>
 </body>
 
-<script data-main="./main.js"
- src="../bower_Components/requirejs/require.js"></script>
+<script data-main="./main.js" src="../bower_Components/requirejs/require.js"></script>
+<script src="../bower_components/jquery/dist/jquery.js"></script>
+
 </html>
