--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,6 @@
 </body>
 
 <script data-main="./main.js" src="../bower_Components/requirejs/require.js"></script>
-<script src="../bower_components/jquery/dist/jquery.js"></script>
+<!--<script src="../bower_components/jquery/dist/jquery.js"></script>-->
 
 </html>
